--- a/app/views/applies/_form.html.erb
+++ b/app/views/applies/_form.html.erb
@@ -2,22 +2,22 @@
   <%= f.input :archive_number %>
   <%= f.simple_fields_for :patient do |ff| %>
     <%= ff.input :name %>
-    <%= ff.input :gender %>
+    <%= ff.input :gender, as: :radio_buttons, collection: enum_options_for_select(Patient, :gender) %>
     <%= ff.input :birth_certificated %>
-    <%= ff.input :id_type %>
+    <%= ff.input :id_type, as: :radio_buttons, collection: enum_options_for_select(Patient, :id_type) %>
     <%= ff.input :id_number %>
-    <%= ff.input :birthday%>
+    <%= ff.input :birthday, start_year: Patient::BIRTHDAY_START_YEAR, end_year: Patient::BIRTHDAY_END_YEAR %>
     <%= ff.input :remark %>
   <% end %>
   <%= f.input :once_applied %>
   <%= f.input :once_applied_remark %>
   <%= f.input :insured %>
   <%= f.input :commercial_insured %>
-  <%= f.input :hospital %>
+  <%= f.association :hospital %>
   <%= f.input :expense_amount %>
   <%= f.input :affordable_amount %>
   <%= f.input :hospital_advice_amount %>
-  <%= f.input :estimate_discharge_at %>
+  <%= f.input :estimate_discharge_at, start_year: Apply::ESTIMATE_DISCHARGE_START_YEAR, end_year: Apply::ESTIMATE_DISCHARGE_END_YEAR %>
   <%= f.input :reason %>
   <%= f.button :submit, class: 'btn-primary' %>
 <% end %>
