--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -1,6 +1,23 @@
-<h1><%= t :sunflower %></h1>
-
-<%= link_to_unless user_signed_in?, t(:sign_in), new_user_session_path  do %>
-  <%= current_user.name %>
-  <%= link_to t(:sign_out), destroy_user_session_path, method: :delete %>
-<% end %>
+<nav class="navbar navbar-inverse navbar-fixed-top">
+  <div class="container-fluid">
+    <div class="navbar-header">
+      <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#navbar" aria-expanded="false" aria-controls="navbar">
+        <span class="sr-only">Toggle navigation</span>
+        <span class="icon-bar"></span>
+        <span class="icon-bar"></span>
+        <span class="icon-bar"></span>
+      </button>
+      <%= link_to t(:sunflower), root_path, class: 'navbar-brand' %>
+    </div>
+    <div id="navbar" class="navbar-collapse collapse">
+      <ul class="nav navbar-nav navbar-right">
+        <% if user_signed_in? %>
+          <li><%= link_to current_user.name, '#' %></li>
+          <li><%= link_to t(:sign_out), destroy_user_session_path, method: :delete %></li>
+        <% else %>
+          <li><%= link_to t(:sign_in), new_user_session_path %></li>
+        <% end %>
+      </ul>
+    </div>
+  </div>
+</nav>
