--- a/app/views/applies/_apply.html.erb
+++ b/app/views/applies/_apply.html.erb
@@ -1,5 +1,13 @@
 <tr>
   <td><%= apply.patient.name %></td>
-  <td><%= apply.disease.name %></td>
+  <td><%= apply.hospital_name %></td>
   <td><%= l apply.estimate_discharge_at %></td>
+  <td class="text-right">
+    <% if policy(apply).edit? %>
+      <%= link_to t(:edit), edit_apply_path(apply) %>
+    <% end %>
+    <% if policy(apply).destroy? %>
+      <%= link_to t(:destroy), apply_path(apply), method: :delete, class: 'text-danger' %>
+    <% end %>
+  </td>
 </tr>
