--- a/app/views/applies/_form.html.erb
+++ b/app/views/applies/_form.html.erb
@@ -10,6 +10,13 @@
       <%= ff.input :id_number %>
       <%= ff.input :birthday, start_year: Patient::BIRTHDAY_START_YEAR, end_year: Patient::BIRTHDAY_END_YEAR %>
       <%= ff.input :remark %>
+
+      <%= ff.simple_fields_for :social_relations do |fff| %>
+        <%= render 'social_relation_fields', f: fff %>
+      <% end %>
+      <div class="links">
+        <%= link_to_add_association t('.add_social_relation'), ff, :social_relations %>
+      </div>
     <% end %>
   <% end %>
 
@@ -19,9 +26,18 @@
     <%= f.input :insured %>
     <%= f.input :commercial_insured %>
     <%= f.association :hospital, include_blank: false, selected: current_user.organization %>
-    <%= f.input :expense_amount %>
-    <%= f.input :affordable_amount %>
-    <%= f.input :hospital_advice_amount %>
+    <%= f.input :expense_amount, wrapper: :horizontal_input_group do %>
+      <span class="input-group-addon">&yen;</span>
+      <%= f.input_field :expense_amount, class: 'form-control' %>
+    <% end %>
+    <%= f.input :affordable_amount, wrapper: :horizontal_input_group do %>
+      <span class="input-group-addon">&yen;</span>
+      <%= f.input_field :affordable_amount, class: 'form-control' %>
+    <% end %>
+    <%= f.input :hospital_advice_amount, wrapper: :horizontal_input_group do %>
+      <span class="input-group-addon">&yen;</span>
+      <%= f.input_field :hospital_advice_amount, class: 'form-control' %>
+    <% end %>
     <%= f.input :estimate_discharge_at, start_year: Apply::ESTIMATE_DISCHARGE_START_YEAR, end_year: Apply::ESTIMATE_DISCHARGE_END_YEAR %>
     <%= f.input :reason %>
   <% end %>
