--- a/app/assets/stylesheets/applies.scss
+++ b/app/assets/stylesheets/applies.scss
@@ -1,3 +1,44 @@
-// Place all the styles related to the applies controller here.
-// They will automatically be included in application.css.
-// You can use Sass (SCSS) here: http://sass-lang.com/
+.page-applies-new {
+  .apply_patient_social_relations .nested-fields {
+    padding: 20px 40px 20px 20px;
+    background-color: #f6f6f6;
+    position: relative;
+    max-width: 800px;
+    display: flex;
+    flex-wrap: wrap;
+
+    .form-group {
+      margin: 10px 0 0;
+      width: 33.33%;
+    }
+
+    .form-group:nth-child(1),
+    .form-group:nth-child(2),
+    .form-group:nth-child(3) {
+      margin-top: 0;
+    }
+
+    .col-sm-9 {
+      padding: 0;
+      width: 95%;
+    }
+
+    .btn-remove {
+      position: absolute;
+      right: 0;
+      top: 0;
+      border-radius: 50%;
+    }
+  }
+
+  .apply_patient_social_relations {
+    .nested-fields + .add-social-relation-wrapper,
+    .nested-fields + .nested-fields {
+      margin-top: 10px;
+    }
+  }
+
+  .apply_once_applied .form-control {
+    max-width: 600px;
+  }
+}
