--- a/app/views/applies/_social_relation_fields.html.erb
+++ b/app/views/applies/_social_relation_fields.html.erb
@@ -1,12 +1,14 @@
 <div class="nested-fields">
-  <%= f.input :relationship, collection: enum_options_for_select(SocialRelation, :relationship), include_blank: false %>
-  <%= f.input :name %>
-  <%= f.input :tel, as: :tel %>
-  <%= f.input :employer %>
-  <%= f.input :employer_tel, as: :tel %>
-  <%= f.input :income_amount, wrapper: :horizontal_input_group do %>
+  <%= f.input :relationship, label: false, collection: enum_options_for_select(SocialRelation, :relationship), include_blank: false %>
+  <%= f.input :name, label: false, placeholder: f.object.class.human_attribute_name(:name) %>
+  <%= f.input :tel, label: false, as: :tel, placeholder: f.object.class.human_attribute_name(:tel) %>
+  <%= f.input :employer, label: false, placeholder: f.object.class.human_attribute_name(:employer) %>
+  <%= f.input :employer_tel, label: false, as: :tel, placeholder: f.object.class.human_attribute_name(:employer_tel) %>
+  <%= f.input :income_amount, label: false, wrapper: :horizontal_input_group do %>
     <span class="input-group-addon">&yen;</span>
-    <%= f.input_field :income_amount, class: 'form-control' %>
+    <%= f.input_field :income_amount, class: 'form-control', placeholder: f.object.class.human_attribute_name(:income_amount) %>
   <% end %>
-  <%= link_to_remove_association 'remove', f %>
+  <%= link_to_remove_association f, class: 'btn btn-lg btn-remove' do %>
+    &times;
+  <% end %>
 </div>
