--- a/app/views/applies/index.html.erb
+++ b/app/views/applies/index.html.erb
@@ -1,4 +1,7 @@
-<%= link_to t('.new_apply'), new_apply_path, class: 'btn btn-success' %>
+<div class="page-header">
+  <%= link_to t('.new_apply'), new_apply_path, class: 'btn btn-success pull-right' %>
+  <h1>申请列表</h1>
+</div>
 
 <table class="table table-hover table-striped">
   <thead>
