--- a/app/assets/stylesheets/layouts.scss
+++ b/app/assets/stylesheets/layouts.scss
@@ -5,7 +5,7 @@
   left: 0;
   z-index: 1000;
   display: block;
-  padding: 20px;
+  padding: 20px 0;
   overflow-x: hidden;
   overflow-y: auto;
   background-color: #f5f5f5;
