ADD: apply search

--- a/app/views/applies/_apply.html.erb
+++ b/app/views/applies/_apply.html.erb
@@ -1,5 +1,6 @@
 <tr>
   <td><%= apply.patient.name %></td>
+  <td><%= l apply.created_at, format: '%Y-%m-%d' %></td>
   <td><%= apply.hospital_name %></td>
   <td><%= l apply.estimate_discharge_at %></td>
   <td class="text-right">
