--- a/app/assets/stylesheets/applies.scss
+++ b/app/assets/stylesheets/applies.scss
@@ -44,6 +44,16 @@
   }
 }
 
+.page-applies-index {
+  .form-search {
+    margin: 0 0 30px 0;
+    
+    .keyword {
+      width: 300px;
+    }
+  }
+}
+
 .page-applies-show {
   .list-group-item {
     display: flex;
