--- a/app/views/applies/index.html.erb
+++ b/app/views/applies/index.html.erb
@@ -3,10 +3,24 @@
   <h1>申请列表</h1>
 </div>
 
-<%= search_form_for @q do |f| %>
-  <%= f.label :patient_name_or_patient_social_relations_name_cont %>
-  <%= f.search_field :patient_name_or_patient_social_relations_name_cont %>
-  <%= f.submit %>
+<%= search_form_for @q, class: 'form form-search form-inline' do |f| %>
+  <div class="input-group date" data-provide="datepicker">
+    <%= f.input :created_at_date_gteq, label: false, placeholder: '开始时间' %>
+    <div class="input-group-addon">
+        <span class="glyphicon glyphicon-calendar"></span>
+    </div>
+  </div>
+
+  <div class="input-group date" data-provide="datepicker">
+    <%= f.input :created_at_date_lteq, label: false, placeholder: '结束时间' %>
+    <div class="input-group-addon">
+        <span class="glyphicon glyphicon-calendar"></span>
+    </div>
+  </div>
+
+  <%= f.input :hospital_id_eq, label: false, collection: Organization.hospital, include_blank: '所有医院' %>
+  <%= f.input :archive_number_or_patient_name_or_patient_social_relations_name_cont, label: false, placeholder: '患儿编号 / 患儿姓名 / 家属姓名', input_html: {class: 'keyword'} %>
+  <%= f.button :submit, class: 'btn btn-default' %>
 <% end %>
 
 <table class="table table-hover table-striped">
@@ -15,7 +29,7 @@
       <% %i[name].each do |field| %>
         <th><%= Patient.human_attribute_name field %></th>
       <% end %>
-      <% %i[hospital estimate_discharge_at].each do |field| %>
+      <% %i[created_at hospital estimate_discharge_at].each do |field| %>
         <th><%= Apply.human_attribute_name field %></th>
       <% end %>
       <th class="text-right"></th>
