--- a/app/views/applies/_form.html.erb
+++ b/app/views/applies/_form.html.erb
@@ -1,4 +1,4 @@
-<%= simple_form_for apply, html: {class: 'form-horizontal'},
+<%= simple_form_for apply, html: {class: 'form form-horizontal form-apply'},
   wrapper: :horizontal_form do |f| %>
   <%# f.input :archive_number %>
   <%= field_set_tag t('.fieldset.patient') do %>
