--- a/app/views/applies/index.html.erb
+++ b/app/views/applies/index.html.erb
@@ -1,5 +1,7 @@
 <div class="page-header">
-  <%= link_to t('.new_apply'), new_apply_path, class: 'btn btn-success pull-right' %>
+  <% if policy(Apply).create? %>
+    <%= link_to t('.new_apply'), new_apply_path, class: 'btn btn-success pull-right' %>
+  <% end %>
   <h1>申请列表</h1>
 </div>
 
@@ -29,7 +31,7 @@
       <% %i[name].each do |field| %>
         <th><%= Patient.human_attribute_name field %></th>
       <% end %>
-      <% %i[hospital created_at estimate_discharge_at].each do |field| %>
+      <% %i[disease hospital created_at estimate_discharge_at status].each do |field| %>
         <th><%= Apply.human_attribute_name field %></th>
       <% end %>
       <th class="text-right"></th>
