--- a/app/views/layouts/_sidebar.html.erb
+++ b/app/views/layouts/_sidebar.html.erb
@@ -7,7 +7,9 @@
       <% end %>
     </li>
   </ul>
-  <ul class="nav nav-sidebar">
-    <li><%= link_to t('.admin'), admin_root_path %></li>
-  </ul>
+  <% if current_user.admin? || current_user.super? %>
+    <ul class="nav nav-sidebar">
+      <li><%= link_to t('.admin'), admin_root_path %></li>
+    </ul>
+  <% end %>
 </div>
